--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html{
+    /* background-color: black; */
+    scroll-behavior: smooth;
+    /* background-image: url('https://img.freepik.com/free-vector/creative-writing-concept-illustration_114360-8137.jpg?w=740&t=st=1708252197~exp=1708252797~hmac=6d97f7cdc4d0b2ddd2ba06d971afb7074afd166bc46ab1b8402250717f48346b'); */
+  /*  background-repeat: no-repeat; */
+
+}
+  
+/* Track */
+::-webkit-scrollbar{
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: #f4f4f4; /* Light background color */
+    border-radius: 8px; /* Rounded corners */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: #888; /* Darker handle color */
+    border-radius: 8px; /* Rounded corners */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Darker handle color on hover */
+}
