--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,7 @@ html {
 ::-webkit-scrollbar-thumb:hover {
     background-color: #555; /* Darker handle color on hover */
 }
+
+body{
+    overflow-x: hidden;
+}
